{
    "name": "CameraMovement",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "e0005478-4c64-48c3-9f43-cf6a05b202cb",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "acd80fcf-3e50-458f-818a-90ca104f4de6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "da38f7ab-bb0c-4ba1-bcc8-0a8df78b339a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "acde6a3b-a613-4863-a2e0-f9286121afd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClickReleased",
                    "type": "Button",
                    "id": "f6ab8ad7-82b3-4a3d-87e2-f55125571620",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "MouseScroll",
                    "type": "PassThrough",
                    "id": "031d5711-0646-40e6-9987-5f9069c865cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb17ff35-d17e-4544-8c0c-694b80169b49",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f84d5a62-ae3d-4530-88fc-6d7c1c9b30a3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40b452c1-0579-41f0-8bb9-14c78751fb48",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c09dfd8-60f6-4bf7-b118-16fc0a5a60f7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30851fe9-7006-40ae-a189-b777441e72cc",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}